force-app/main/UtilityComponents/nuviAIANDSupportANDTheme/nuvitekCustomThemeLayoutAndAccess/objects/NuvitekAppAccess__mdt/NuvitekAppAccess__mdt.object-meta.xml
<CustomObject>
    <label>Nuvitek App Access</label>
    <pluralLabel>Nuvitek App Access</pluralLabel>
</CustomObject>