force-app/main/UtilityComponents/nuviAIANDSupportANDTheme/nuvitekCustomThemeLayoutAndAccess/objects/NuvitekAppAccess__mdt/fields/AppName__c.field-meta.xml
<CustomField>
    <fullName>AppName__c</fullName>
    <description>Name of the application</description>
    <inlineHelpText
  >Enter the name of the application as it appears in the navigation tiles</inlineHelpText>
    <label>App Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>