force-app/main/UtilityComponents/nuviAIANDSupportANDTheme/nuvitekCustomThemeLayoutAndAccess/objects/NuvitekAppAccess__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of this role and its capabilities</description>
    <inlineHelpText>Enter a description of what this role provides access to</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>