force-app/main/UtilityComponents/nuviAIANDSupportANDTheme/nuvitekCustomThemeLayoutAndAccess/objects/NuvitekAppAccess__mdt/fields/IsDefault__c.field-meta.xml
<CustomField>
    <fullName>IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates if this is the default role option for this app</description>
    <inlineHelpText
  >Check if this is the default role option for this app</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>