force-app/main/UtilityComponents/nuviAIANDSupportANDTheme/nuvitekCustomThemeLayoutAndAccess/objects/NuvitekAppAccess__mdt/fields/PermissionSets__c.field-meta.xml
<CustomField>
    <fullName>PermissionSets__c</fullName>
    <description>Comma-separated list of permission set API names to assign</description>
    <inlineHelpText>Enter comma-separated list of permission set API names to assign for this role</inlineHelpText>
    <label>Permission Sets</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>