force-app/main/UtilityComponents/nuviAIANDSupportANDTheme/nuvitekCustomThemeLayoutAndAccess/objects/NuvitekAppAccess__mdt/fields/RoleName__c.field-meta.xml
<CustomField>
    <fullName>RoleName__c</fullName>
    <description>Name of the role (Admin, User, etc.)</description>
    <inlineHelpText>Enter the role name for this access level</inlineHelpText>
    <label>Role Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>